@@ -7,7 +7,7 @@ INCLUDEPATH = -I. -Ilib -Ilogiclayerserialization/src\
                 -I/usr/local/include/cc++2 \
 		-I/usr/include/cc++2
 
-# DEFINES=-DHAVE_MMAP64
+#DEFINES=-DHAVE_MMAP64
 
 #OPTIMIZATION_FLAGS=-O3 -finline-functions -finline-functions-called-once -fearly-inlining
 OPTIMIZATION_FLAGS=-O0
@@ -44,6 +44,7 @@ LIB_OBJS=lib/grid.o \
 	lib/scaling_manager.o
 
 GUI_OBJS=gui/SplashWin.o \
+	gui/HlObjectSet.o \
 	gui/NewProjectWin.o \
 	gui/GridConfigWin.o \
 	gui/GateConfigWin.o \
